policies/grafana-enforce-folder-for-dashboard/tests/base/binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        vaplib-grafana-enforce-folder-for-dashboard: deny
    objectSelector: {}
  policyName: vaplib-grafana-enforce-folder-for-dashboard
  validationActions:
  - Deny
