policies/grafana-enforce-folder-for-dashboard/tests/base/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
- binding.yaml
- test.yaml
