policies/grafana-enforce-folder-for-dashboard/tests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard
  labels:
    vaplib-grafana-enforce-folder-for-dashboard: deny
