policies/grafana-enforce-folder-for-dashboard/tests/base/test.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: vaplibtest-grafana-enforce-folder-for-dashboard
data:
  test: "test"
